--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -1,12 +1,76 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.Todo.ucTodo"
+    x:Class="HomeManager.View.ucTodo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:HomeManager.View.Todo"
+    xmlns:local="clr-namespace:HomeManager.View"
+    xmlns:uc="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d">
-    <Grid />
+    mc:Ignorable="d"
+    Background="White">
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="0">
+            <Button
+                Width="30"
+                Height="30"
+                Margin="0,20,0,0"
+                HorizontalAlignment="Right"
+                Style="{StaticResource AddButton}"
+            />
+        </StackPanel>
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="1">
+            <Button
+                Width="30"
+                Height="30"
+                Margin="0,20,0,0"
+                HorizontalAlignment="Right"
+                Style="{StaticResource AddButton}"
+            />
+        </StackPanel>
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="2">
+            <Button
+                Width="30"
+                Height="30"
+                Margin="0,20,0,0"
+                HorizontalAlignment="Right"
+                Style="{StaticResource AddButton}"
+            />
+        </StackPanel>
+        <ListBox
+          
+            Grid.Row="1"
+            Grid.Column="0"
+        />
+        <ListBox
+            BorderBrush="Gray"
+            BorderThickness="1"
+            Grid.Row="1"
+            Grid.Column="1"
+        />
+        <ListBox
+            BorderBrush="Gray"
+            BorderThickness="1"
+            Grid.Row="1"
+            Grid.Column="2"
+        />
+    </Grid>
 </UserControl>
