--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -143,6 +143,8 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="ContentControl">
                             <Path
+                                Width="15"
+                                Height="15"
                                 Data="{StaticResource myDeletePersoon}"
                                 Fill="{StaticResource myWerkBalkDisable}"
                                 RenderTransformOrigin="0.5,0.5"
