--- a/HomeManager/View/Personen/ucAdressen.xaml
+++ b/HomeManager/View/Personen/ucAdressen.xaml
@@ -145,6 +145,23 @@
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FunctieID, Mode=TwoWay}"
                     SelectedValuePath="FunctieID" />
+                <TextBlock
+                    x:Name="Persoon"
+                    Grid.Row="7"
+                    Grid.Column="2"
+                    Margin="5"
+                    Text="Persoon"
+                    TextAlignment="Right" />
+                <ComboBox
+                    x:Name="cboPersoon"
+                    Grid.Row="7"
+                    Grid.Column="3"
+                    Margin="5"
+                    DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
+                    DisplayMemberPath="PersoonDisplayName"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
+                    SelectedValuePath="PersoonID" />
             </Grid>
         </Border>
     </Grid>
