--- a/HomeManager/View/Personen/ucEmailAdressen.xaml
+++ b/HomeManager/View/Personen/ucEmailAdressen.xaml
@@ -113,6 +113,24 @@
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay}"
                     SelectedValuePath="EmailTypeID" />
+
+                <TextBlock
+                    x:Name="Persoon"
+                    Grid.Row="5"
+                    Grid.Column="2"
+                    Margin="5"
+                    Text="Persoon"
+                    TextAlignment="Right" />
+                <ComboBox
+                    x:Name="cboPersoon"
+                    Grid.Row="5"
+                    Grid.Column="3"
+                    Margin="5"
+                    DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}"
+                    DisplayMemberPath="PersoonDisplayName"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
+                    SelectedValuePath="PersoonID" />
             </Grid>
         </Border>
     </Grid>
