--- a/HomeManager/View/Personen/ucAdressen.xaml
+++ b/HomeManager/View/Personen/ucAdressen.xaml
@@ -8,8 +8,8 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="250"
+    d:DesignWidth="450"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=AdressenViewModel}">
@@ -74,14 +74,15 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
-                <ListBox
+                
+                <!--<ListBox
                     Name="UserListView"
                     Grid.Row="2"
                     Grid.RowSpan="7"
                     Grid.Column="1"
                     Width="250"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
                 <TextBlock
                     x:Name="Straat"
@@ -145,7 +146,7 @@
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FunctieID, Mode=TwoWay}"
                     SelectedValuePath="FunctieID" />
-                <TextBlock
+                <!--<TextBlock
                     x:Name="Persoon"
                     Grid.Row="7"
                     Grid.Column="2"
@@ -161,7 +162,7 @@
                     DisplayMemberPath="PersoonDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
-                    SelectedValuePath="PersoonID" />
+                    SelectedValuePath="PersoonID" />-->
             </Grid>
         </Border>
     </Grid>
