--- a/HomeManager/View/Personen/ucEmailAdressen.xaml
+++ b/HomeManager/View/Personen/ucEmailAdressen.xaml
@@ -7,8 +7,8 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="250"
+    d:DesignWidth="400"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=EmailAdressenViewModel}">
@@ -73,14 +73,14 @@
                     <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
 
-                <ListBox
+                <!--<ListBox
                     Name="UserListView"
                     Grid.Row="2"
                     Grid.RowSpan="7"
                     Grid.Column="1"
                     Width="250"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
                 <TextBlock
                     x:Name="EmailAdres"
@@ -114,7 +114,7 @@
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay}"
                     SelectedValuePath="EmailTypeID" />
 
-                <TextBlock
+                <!--<TextBlock
                     x:Name="Persoon"
                     Grid.Row="5"
                     Grid.Column="2"
@@ -130,7 +130,7 @@
                     DisplayMemberPath="PersoonDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
-                    SelectedValuePath="PersoonID" />
+                    SelectedValuePath="PersoonID" />-->
             </Grid>
         </Border>
     </Grid>
