--- a/HomeManager/View/Personen/ucTelefoonNummers.xaml
+++ b/HomeManager/View/Personen/ucTelefoonNummers.xaml
@@ -8,8 +8,8 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="500"
-    d:DesignWidth="800"
+    d:DesignHeight="200"
+    d:DesignWidth="450"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=TelefoonNummersViewModel}">
@@ -76,14 +76,14 @@
                     <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
 
-                <ListBox
+                <!--<ListBox
                     Name="UserListView"
                     Grid.Row="2"
                     Grid.RowSpan="7"
                     Grid.Column="1"
                     Width="250"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
                 <TextBlock
                     x:Name="Telefoonnummer"
