--- a/HomeManager/View/Personen/ucPersonen.xaml
+++ b/HomeManager/View/Personen/ucPersonen.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -50,11 +50,12 @@
 
         </Border>
 
-        <Grid Grid.Row="1" DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="200" />
             </Grid.ColumnDefinitions>
+
             <Border
                 Margin="1,1,1,1"
                 BorderBrush="{StaticResource myTitleBar}"
@@ -69,7 +70,6 @@
                     <StackPanel
                         Margin="2"
                         HorizontalAlignment="Left"
-                        DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                         Orientation="Horizontal">
                         <TextBox
                             x:Name="txtSearchbar"
@@ -89,7 +89,6 @@
                         Width="600"
                         Height="375"
                         Margin="2,10,2,0"
-                        DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                         ItemsSource="{Binding MijnCollectie}"
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                         ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -115,6 +114,10 @@
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="*" />
+                                        </Grid.RowDefinitions>
                                         <Border
                                             Grid.Column="0"
                                             Width="30"
@@ -134,14 +137,20 @@
                                         </Border>
                                         <StackPanel
                                             Grid.Column="1"
+                                            Grid.ColumnSpan="2"
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Bottom"
                                             Orientation="Vertical">
                                             <TextBlock
                                                 FontSize="9"
                                                 FontWeight="Bold"
-                                                Text="{Binding Naam}" />
-                                            <TextBlock FontSize="8" Text="{Binding Voornaam}" />
+                                                Text="{Binding Naam}"
+                                                TextWrapping="Wrap" />
+                                            <TextBlock
+                                                Grid.RowSpan="3"
+                                                FontSize="8"
+                                                Text="{Binding Voornaam}"
+                                                TextWrapping="Wrap" />
                                             <TextBlock FontSize="8" Text="{Binding Geboortedatum}" />
                                         </StackPanel>
                                         <StackPanel
@@ -164,7 +173,6 @@
                                                 Margin="0,0,0,0"
                                                 Command="{Binding cmdEditPersoon}"
                                                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                                DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                                                 Style="{StaticResource EditPersoon}"
                                                 ToolTip="Aanpassen" />
                                             <Button
@@ -183,9 +191,6 @@
                     </ListView>
                 </Grid>
             </Border>
-
-
-
 
 
             <Border
@@ -215,7 +220,7 @@
                             <TextBlock
                                 Margin="5,0,0,0"
                                 Foreground="White"
-                                Text="Email adressen" />
+                                Text="Email adressen" HorizontalAlignment="Left" Width="189" />
                             <Button
                                 Width="10"
                                 Height="10"
@@ -223,7 +228,6 @@
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Command="{Binding cmdEditEmailAdressen}"
-                                DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                                 Style="{StaticResource AddImage}" />
                         </Grid>
                     </Border>
@@ -232,8 +236,7 @@
                         Grid.Row="1"
                         Grid.Column="1"
                         Width="250"
-                        DataContext="{Binding Source={StaticResource VML}, Path=EmailAdressenViewModel}"
-                        ItemsSource="{Binding MijnCollectie}"
+                        ItemsSource="{Binding EmailAdressenCollectie}"
                         SelectedItem="{Binding MijnSelectedItem.PersoonID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                     <!--  Adressen  -->
@@ -254,7 +257,6 @@
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Command="{Binding cmdEditAdressen}"
-                                DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                                 Style="{StaticResource AddImage}" />
                         </Grid>
                     </Border>
@@ -263,7 +265,6 @@
                         Grid.Row="3"
                         Grid.Column="1"
                         Width="250"
-                        DataContext="{Binding Source={StaticResource VML}, Path=AdressenViewModel}"
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -286,7 +287,6 @@
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Command="{Binding cmdEditTelefoonNummers}"
-                                DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                                 Style="{StaticResource AddImage}" />
                         </Grid>
                     </Border>
@@ -295,7 +295,6 @@
                         Grid.Row="5"
                         Grid.Column="1"
                         Width="250"
-                        DataContext="{Binding Source={StaticResource VML}, Path=TelefoonNummersViewModel}"
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -318,6 +317,8 @@
                                 Margin="0,0,5,0"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
+                                Command="{Binding cmdEditEmailAdressen}"
+                                CommandParameter="{Binding MijnSelectedItem.PersoonID}"
                                 Style="{StaticResource AddImage}" />
                         </Grid>
                     </Border>
