--- a/HomeManager/View/Personen/ucNotities.xaml
+++ b/HomeManager/View/Personen/ucNotities.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.ucAdressen"
+    x:Class="HomeManager.View.ucNotities"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Converters="clr-namespace:HomeManager.Converter"
@@ -8,11 +8,11 @@
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
-    d:DesignHeight="250"
+    d:DesignHeight="400"
     d:DesignWidth="450"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding Source={StaticResource VML}, Path=AdressenViewModel}">
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=NotitiesViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -20,6 +20,7 @@
 
         <Border
             Grid.Row="0"
+            Grid.ColumnSpan="5"
             Background="{StaticResource myTitleBar}"
             BorderBrush="LightBlue"
             BorderThickness="2">
@@ -32,7 +33,7 @@
                     <Path
                         Width="20"
                         Height="20"
-                        Data="{StaticResource myPathSetting}"
+                        Data="{StaticResource myPathNote}"
                         Fill="White"
                         Stretch="Fill" />
                     <TextBlock
@@ -40,7 +41,7 @@
                         VerticalAlignment="Center"
                         FontSize="20"
                         Foreground="White"
-                        Text="Adressen" />
+                        Text="Notities" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
@@ -57,10 +58,9 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="250" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="150" />
-                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35" />
@@ -75,101 +75,53 @@
                     <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
 
-                <!--<ListBox
-                    Name="UserListView"
-                    Grid.Row="2"
-                    Grid.RowSpan="7"
-                    Grid.Column="1"
-                    Width="250"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
                 <TextBlock
                     x:Name="tbNaam"
                     Grid.Row="0"
-                    Grid.Column="3"
+                    Grid.Column="1"
                     Text="{Binding MijnSelectedItem.PersoonID, Mode=OneWay}" />
 
                 <TextBlock
-                    x:Name="Straat"
+                    x:Name="tbOnderwerp"
                     Grid.Row="2"
-                    Grid.Column="2"
+                    Grid.Column="0"
                     Margin="5"
-                    Text="Straat"
+                    Text="Onderwerp"
                     TextAlignment="Right" />
                 <TextBox
-                    x:Name="txtStraat"
+                    x:Name="txtOnderwerp"
                     Grid.Row="2"
-                    Grid.Column="3"
+                    Grid.Column="1"
                     Margin="5"
-                    Text="{Binding MijnSelectedItem.Straat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
+                    Text="{Binding MijnSelectedItem.Onderwerp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}"
+                    TextWrapping="Wrap" />
 
                 <TextBlock
-                    x:Name="Nummer"
-                    Grid.Row="4"
-                    Grid.Column="2"
+                    x:Name="TelefoonType"
+                    Grid.Row="3"
+                    Grid.Column="0"
                     Margin="5"
-                    Text="Nummer"
+                    Text="TelefoonType"
                     TextAlignment="Right" />
                 <TextBox
-                    x:Name="txtNummer"
-                    Grid.Row="4"
-                    Grid.Column="3"
+                    x:Name="tbNotities"
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Width="250"
+                    Height="200"
                     Margin="5"
-                    Text="{Binding MijnSelectedItem.Nummer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
-
-                <TextBlock
-                    x:Name="Gemeente"
-                    Grid.Row="5"
-                    Grid.Column="2"
-                    Margin="5"
-                    Text="Gemeente"
-                    TextAlignment="Right" />
-                <ComboBox
-                    x:Name="cboGemeente"
-                    Grid.Row="5"
-                    Grid.Column="3"
-                    Margin="5"
-                    DataContext="{Binding Source={StaticResource VML}, Path=GemeenteViewModel}"
-                    DisplayMemberPath="GemeenteDisplayName"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.GemeenteID, Mode=TwoWay}"
-                    SelectedValuePath="GemeenteID" />
-                <TextBlock
-                    x:Name="Functie"
-                    Grid.Row="6"
-                    Grid.Column="2"
-                    Margin="5"
-                    Text="Functie"
-                    TextAlignment="Right" />
-                <ComboBox
-                    x:Name="cboFunctie"
-                    Grid.Row="6"
-                    Grid.Column="3"
-                    Margin="5"
-                    DataContext="{Binding Source={StaticResource VML}, Path=FunctieViewModel}"
-                    DisplayMemberPath="FunctieDisplayName"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FunctieID, Mode=TwoWay}"
-                    SelectedValuePath="FunctieID" />
-                <TextBlock
-                    x:Name="Persoon"
-                    Grid.Row="7"
-                    Grid.Column="2"
-                    Margin="5"
-                    Text="Persoon"
-                    TextAlignment="Right" />
+                    Text="{Binding MijnSelectedItem.Notitie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}"
+                    TextWrapping="Wrap" />
                 <!--<ComboBox
                     x:Name="cboPersoon"
-                    Grid.Row="7"
-                    Grid.Column="3"
+                    Grid.Row="4"
+                    Grid.Column="1"
                     Margin="5"
                     DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
                     DisplayMemberPath="PersoonDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
                     SelectedValuePath="PersoonID" />-->
-
-
             </Grid>
         </Border>
     </Grid>
