--- a/HomeManager/View/Personen/ucTelefoonNummers.xaml
+++ b/HomeManager/View/Personen/ucTelefoonNummers.xaml
@@ -86,6 +86,12 @@
                     SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
                 <TextBlock
+                    x:Name="tbNaam"
+                    Grid.Row="0"
+                    Grid.Column="3"
+                    Text="{Binding MijnSelectedItem.PersoonID, Mode=OneWay}" />
+
+                <TextBlock
                     x:Name="Telefoonnummer"
                     Grid.Row="2"
                     Grid.Column="2"
@@ -108,7 +114,7 @@
                     Text="TelefoonType"
                     TextAlignment="Right" />
                 <ComboBox
-                    x:Name="cboLand"
+                    x:Name="cboTelefoonType"
                     Grid.Row="3"
                     Grid.Column="3"
                     Margin="5"
